# trajectory_prediction

./: .env.example  .gitignore  CHANGELOG.md  README.md  TODO.md  app.py  main.py  pyproject.toml
config/: __init__.py  beijing_bounds.py  settings.py
data/: __init__.py  loader.py
evaluation/: visualization.py
features/: cleaning.py  outlier_detection.py
models/: model_factory.py  persistence.py
scripts/: eda.py
training/: __init__.py  pipeline.py
