[project]
name = "trajectory-prediction-project"
version = "0.2.0"
description = "Trajectory Prediction - ML Pipeline com Streamlit"
authors = [
    {name = "Lucas Cavalcante dos Santos",email = "cavalcanteprofissional@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # ML
    "catboost (>=1.0.0)",
    "xgboost (>=1.7.0)",
    "lightgbm (>=3.3.0)",
    "scikit-learn (>=1.3.0)",
    "optuna (>=4.6.0)",
    
    # Dados
    "pandas (>=2.0.0)",
    "numpy (>=1.24.0)",
    
    # Visualização
    "matplotlib (>=3.7.0)",
    "folium (>=0.20.0)",
    
    # App
    "streamlit (>=1.28.0)",
    "joblib (>=1.3.0)",
    "kagglehub (>=0.1.0)",
    
    # Utils
    "python-dotenv (>=1.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"